--- a/Addproduct.html
+++ b/Addproduct.html
@@ -11,41 +11,74 @@
 	 		 <h1 class="login1">Add Product</h1>
  		</div>
 	</div>
- <form action="addp.php" method="POST">
+ <form action="#" method="POST" id="AddProductForm">
+ <input type="hidden" name="add_product" value="true" />
  	<div class="falign">
    <div class="form-group">
     <label for="instru_id">Instrument Id</label>
-    <input type="text" name="insid" class="form-control" id="instru_id" aria-describedby="Instrument Id" placeholder="Enter Instrument Id">
+    <input type="text" name="insid" class="form-control" id="instru_id" aria-describedby="Instrument Id" placeholder="Enter Instrument Id" required>
    </div>
   <div class="form-group">
     <label for="instru_name">Instrument Name</label>
-    <input type="text" name="insname" class="form-control" id="instru_name" aria-describedby="Instrument Name" placeholder="Enter Instrument Name">
+    <input type="text" name="insname" class="form-control" id="instru_name" aria-describedby="Instrument Name" placeholder="Enter Instrument Name" required>
   </div>
   <div class="form-group">
     <label for="instru_brand">Instrument Brand</label>
-    <input type="text" name="insbrand" class="form-control" id="instru_brand" aria-describedby="Instrument brand" placeholder="Enter Instrument brand">
+    <input type="text" name="insbrand" class="form-control" id="instru_brand" aria-describedby="Instrument brand" placeholder="Enter Instrument brand" required>
   </div> 
   
   <div class="form-group">
     <label for="instru_category">Instrument Category</label>
-    <input type="text" name="inscat" class="form-control" id="instru_category" placeholder="Category">
+    <input type="text" name="inscat" class="form-control" id="instru_category" placeholder="Category" required>
   </div>
   <div class="form-group">
     <label for="price">Price</label>
-    <input type="number" name="insprice" class="form-control" id="price" placeholder="Price In Rupees">
+    <input type="number" name="insprice" class="form-control" id="price" placeholder="Price In Rupees" required>
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <input type="text" name="insdes" class="form-control" id="description" placeholder="Description">
+    <input type="text" name="insdes" class="form-control" id="description" placeholder="Description" required>
   </div>
   <div class="fbalign">
-  <button type="submit" class="btn btn-primary subbut">Submit</button>
+  <button type="submit" class="btn btn-primary btn-lg subbut">Submit</button>
+  
   </div>
 </div>
  </form>
-	
-
+  <div class="fbalign">
+<a href="display.php" target="_blank"><button type="submit" class="btn btn-primary btn-lg subbut">View All Products</button></a>
+</div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script>
+$(document).ready(function(){
+	$("#AddProductForm").submit(function(){
+		var formdata=$("#AddProductForm").serialize();
+		$.ajax({
+			url:"verify.php",
+			type:"POST",
+			data:formdata,
+			success:function(response){
+				console.log(response);
+				try{
+					var resp=JSON.parse(response);
+					if(resp.code=="ADD_PRODUCT_SUC"){
+						alert("Product Added successfuly");
+					}
+					else{
+						alert(resp.msg);
+					}
+				}catch(err){
+					alert(err);
+				}
+			},
+			error:function(response){
+				alert("please check your internet connection and try again");
+			}
+		});
+		return false;
+	});
+});
+</script>
 </body>
 </html>
